# c_poppler_example

./: .clang-format  .clang-tidy  .gitignore  meson.build  tasks.py
src/: generate_page_image.h  higlith_word.h  main.c
subprojects/: poppler.wrap
